# FinPulse-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTERVIEW.md  INTERVIEW_NOTES.md  README.md  TECHNICAL_DETAILS_FOR_INTERVIEW.md  config.py  docker-compose.yml  error.txt  exclude.txt  explore_data.py  extract_certs.py  fetch_stock_data.py  ingest_bronze.py  pyproject.toml  requirements.txt  windows_certs.pem
.ai-dev-kit/: .installed-skills
.cursor/: mcp.json
.gemini/: settings.json
ai_layer/: agent1_hunt.py  finpulse_app.py
data_quality/: checks_stocks.yml  checks_transactions.yml  soda_config.yml  soda_utils.py
dbt_finpulse/: Architecture.md  dbt_project.yml
dbt_finpulse/models/: sources.yml
dbt_finpulse/models/gold/: aml_risk_indicators.sql  balance_discrepancy_summary.sql  daily_stock_summary.sql  daily_transaction_summary.sql  entity_laundering_profile.sql  flagged_account_transactions.sql  fraud_rate_by_type.sql  high_risk_accounts.sql  hourly_pattern_analysis.sql  investigation_queue.sql  moving_averages.sql  schema.yml  stocks_performance_ranking.sql  transaction_market_context.sql  volatility_metrics.sql
ingestion/: cloud_promotion.py  cloud_promotion_direct.py  explore_data.py  fetch_stock_data.py  ingest_bronze.py  mock_stocks.py
legacy_design_backup/: agent1_hunt.py  agent2_investigate.py  agent3_risk_assesment  agent4_executive_summary  finpulse_app.py
notebooks/: silver_accounts.ipynb  silver_layer.ipynb  silver_stocks.ipynb  silver_transactions.ipynb
prefect_flows/: finpulse_pipeline.py
