[project]
name = "finpulse-pipeline"
version = "1.0.0"
description = "Financial Data Engineering Pipeline"
readme = "GEMINI.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "prefect>=2.0.0",
    "yfinance>=0.2.0",
    "python-dotenv>=1.0.0",
    "curl-cffi>=0.7.0",
    "requests>=2.30.0",
    "urllib3>=2.0.0"
]
